Bug 1263218 - Fix possbile race under oomTest involving background threads r=terrence